--- a/guestbook/nginx-set.yaml
+++ b/guestbook/nginx-set.yaml
@@ -5,31 +5,24 @@ metadata:
 spec:
   selector:
     matchLabels:
-      app: nginx 
+      app: nginx
   serviceName: "nginx"
-  replicas: 1 
-  minReadySeconds: 0
+  replicas: 3
   template:
     metadata:
       labels:
-        app: nginx 
+        app: nginx
     spec:
-      terminationGracePeriodSeconds: 10
       containers:
       - name: nginx
-        image: registry.k8s.io/nginx-slim:0.8
+        image: nginx
         ports:
         - containerPort: 80
           name: web
         volumeMounts:
         - name: www
           mountPath: /usr/share/nginx/html
-  volumeClaimTemplates:
-  - metadata:
-      name: www
-    spec:
-      accessModes: [ "ReadWriteOnce" ]
-      storageClassName: "my-storage-class"
-      resources:
-        requests:
-          storage: 1Gi
+      volumes:
+      - name: www
+        persistentVolumeClaim:
+          claimName: myclaim
