--- a/guestbook/ngins-vol.yaml
+++ b/guestbook/ngins-vol.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   volumeName: web-persistent-volume
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
       storage: 8Gi
