--- a/guestbook/nginx-set.yaml
+++ b/guestbook/nginx-set.yaml
@@ -25,6 +25,7 @@ spec:
           
       - name: test
         image: alpine
+        command: ["/bin/sh"]
       volumes:
       - name: www
         persistentVolumeClaim:
