--- a/guestbook/nginx-set.yaml
+++ b/guestbook/nginx-set.yaml
@@ -26,6 +26,7 @@ spec:
       - name: test
         image: alpine
         command: ["/bin/sh"]
+        args: ["sleep 1000"]
       volumes:
       - name: www
         persistentVolumeClaim:
