--- a/guestbook-prod/guestbook/guestbook-ui-deployment.yaml
+++ b/guestbook-prod/guestbook/guestbook-ui-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: guestbook-ui
-  namespace: guestbook
+  namespace: guestbook-prod
 spec:
   replicas: 1
   revisionHistoryLimit: 3
@@ -15,7 +15,7 @@ spec:
         app: guestbook-ui
     spec:
       containers:
-      - image: amankinenko/ks-guestbook-demo:0.6
+      - image: amankinenko/ks-guestbook-demo:0.1
         name: guestbook-ui
         ports:
         - containerPort: 80
