--- a/guestbook-prod/guestbook/guestbook-ui-svc.yaml
+++ b/guestbook-prod/guestbook/guestbook-ui-svc.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: guestbook-ui
-  namespace: guestbook-prod
+  namespace: guestbook
 spec:
   ports:
-  - port: 80
-    targetPort: 80
+    - port: 80
+      targetPort: 80
   selector:
-    app: guestbook-ui 
+    app: guestbook-ui
