--- a/prod/helm-guestbook/values.yaml
+++ b/prod/helm-guestbook/values.yaml
@@ -3,10 +3,10 @@
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
-namespace: guestbook
+namespace: guestbook-prod
 image:
   repository: amankinenko/ks-guestbook-demo
-  tag: 0.5
+  tag: 0.1
   pullPolicy: IfNotPresent
 
 service:
