--- a/guestbook/guestbook-ui-deployment.yaml
+++ b/guestbook/guestbook-ui-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: guestbook
 
 spec:
-  replicas: 1
+  replicas: 2
   revisionHistoryLimit: 3
   selector:
     matchLabels:
@@ -16,7 +16,7 @@ spec:
         app: guestbook-ui
     spec:
       containers:
-      - image: amankinenko/ks-guestbook-demo:0.5
+      - image: amankinenko/ks-guestbook-demo:latest
         name: guestbook-ui
         ports:
         - containerPort: 80
