--- a/helm-guestbook/values.yaml
+++ b/helm-guestbook/values.yaml
@@ -1,40 +1,23 @@
-# Default values for helm-guestbook.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
+environment: production
+businessUnit: finance
+datacenter: dc1
 
-replicaCount: 1
-namespace: guestbook
-image:
-  repository: amankinenko/ks-guestbook-demo
-  tag: 0.5
-  pullPolicy: IfNotPresent
-
-service:
-  type: ClusterIP
-  port: 80
-
-ingress:
-  enabled: false
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  path: /
-  hosts:
-    - chart-example.local
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
-
-resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #  cpu: 100m
-  #  memory: 128Mi
-  # requests:
-  #  cpu: 100m
-  #  memory: 128Mi
-
+# generator matrix values
+generators:
+  - clusters:
+      selector:
+        matchLabels:
+          argocd.argoproj.io/secret-type: cluster
+        matchExpressions:
+          - key: environment
+            operator: Exists
+          - key: businessUnit
+            operator: Exists
+          - key: datacenter
+            operator: In
+            values:
+              - dc1
+  - list:
+      elements:
+        - folder: apps
+        - folder: services
